// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component - in a non-root path 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title><polygon fill-rule="evenodd" points="31 17 8.414 17 18.707 6.707 17.293 5.293 4.586 18 17.293 30.707 18.707 29.293 8.414 19 31 19"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/en/blog/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title><g fill-rule="evenodd"><path d="M28.1631,13.7905 C27.0391,11.0755 24.9251,8.9615 22.2101,7.8375 L21.4441,9.6855 C23.6651,10.6045 25.3951,12.3345 26.3151,14.5555 C27.2351,16.7765 27.2351,19.2235 26.3151,21.4435 C24.4161,26.0285 19.1381,28.2145 14.5561,26.3145 C12.3351,25.3945 10.6041,23.6655 9.6841,21.4445 C8.7651,19.2235 8.7651,16.7765 9.6841,14.5565 C10.6051,12.3345 12.3351,10.6045 14.5561,9.6855 L13.7901,7.8375 C11.0761,8.9615 8.9621,11.0755 7.8371,13.7905 C6.7131,16.5045 6.7131,19.4955 7.8371,22.2095 C8.9611,24.9245 11.0751,27.0385 13.7901,28.1625 C15.1621,28.7305 16.5851,28.9995 17.9851,28.9995 C22.3041,28.9995 26.4101,26.4405 28.1631,22.2095 C29.2871,19.4955 29.2871,16.5045 28.1631,13.7905"/><polygon points="17 18 19 18 19 5 17 5"/></g>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<g fill-rule="evenodd"><path d="M6,11 C5.449,11 5,11.448 5,12 L5,26 C5,26.552 5.449,27 6,27 L30,27 C30.551,27 31,26.552 31,26 L31,12 C31,11.448 30.551,11 30,11 L25.382,11 L23.382,7 L12.618,7 L10.618,11 L6,11 Z M30,29 L6,29 C4.346,29 3,27.654 3,26 L3,12 C3,10.346 4.346,9 6,9 L9.382,9 L11.382,5 L24.618,5 L26.618,9 L30,9 C31.654,9 33,10.346 33,12 L33,26 C33,27.654 31.654,29 30,29 L30,29 Z"/><path d="M18 13C15.243 13 13 15.243 13 18 13 20.757 15.243 23 18 23 20.757 23 23 20.757 23 18 23 15.243 20.757 13 18 13M18 25C14.14 25 11 21.859 11 18 11 14.141 14.14 11 18 11 21.86 11 25 14.141 25 18 25 21.859 21.86 25 18 25M29.5 14C29.5 14.828 28.828 15.5 28 15.5 27.172 15.5 26.5 14.828 26.5 14 26.5 13.172 27.172 12.5 28 12.5 28.828 12.5 29.5 13.172 29.5 14"/></g>",
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
      viewBox="0 0 36 36"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title><polygon fill-rule="evenodd" points="31 17 8.414 17 18.707 6.707 17.293 5.293 4.586 18 17.293 30.707 18.707 29.293 8.414 19 31 19"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title><g fill-rule="evenodd"><path d="M28.1631,13.7905 C27.0391,11.0755 24.9251,8.9615 22.2101,7.8375 L21.4441,9.6855 C23.6651,10.6045 25.3951,12.3345 26.3151,14.5555 C27.2351,16.7765 27.2351,19.2235 26.3151,21.4435 C24.4161,26.0285 19.1381,28.2145 14.5561,26.3145 C12.3351,25.3945 10.6041,23.6655 9.6841,21.4445 C8.7651,19.2235 8.7651,16.7765 9.6841,14.5565 C10.6051,12.3345 12.3351,10.6045 14.5561,9.6855 L13.7901,7.8375 C11.0761,8.9615 8.9621,11.0755 7.8371,13.7905 C6.7131,16.5045 6.7131,19.4955 7.8371,22.2095 C8.9611,24.9245 11.0751,27.0385 13.7901,28.1625 C15.1621,28.7305 16.5851,28.9995 17.9851,28.9995 C22.3041,28.9995 26.4101,26.4405 28.1631,22.2095 C29.2871,19.4955 29.2871,16.5045 28.1631,13.7905"/><polygon points="17 18 19 18 19 5 17 5"/></g>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<g fill-rule="evenodd"><path d="M6,11 C5.449,11 5,11.448 5,12 L5,26 C5,26.552 5.449,27 6,27 L30,27 C30.551,27 31,26.552 31,26 L31,12 C31,11.448 30.551,11 30,11 L25.382,11 L23.382,7 L12.618,7 L10.618,11 L6,11 Z M30,29 L6,29 C4.346,29 3,27.654 3,26 L3,12 C3,10.346 4.346,9 6,9 L9.382,9 L11.382,5 L24.618,5 L26.618,9 L30,9 C31.654,9 33,10.346 33,12 L33,26 C33,27.654 31.654,29 30,29 L30,29 Z"/><path d="M18 13C15.243 13 13 15.243 13 18 13 20.757 15.243 23 18 23 20.757 23 23 20.757 23 18 23 15.243 20.757 13 18 13M18 25C14.14 25 11 21.859 11 18 11 14.141 14.14 11 18 11 21.86 11 25 14.141 25 18 25 21.859 21.86 25 18 25M29.5 14C29.5 14.828 28.828 15.5 28 15.5 27.172 15.5 26.5 14.828 26.5 14 26.5 13.172 27.172 12.5 28 12.5 28.828 12.5 29.5 13.172 29.5 14"/></g>",
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
      viewBox="0 0 36 36"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component with portrait set 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title><polygon fill-rule="evenodd" points="31 17 8.414 17 18.707 6.707 17.293 5.293 4.586 18 17.293 30.707 18.707 29.293 8.414 19 31 19"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      admin
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title><g fill-rule="evenodd"><path d="M28.1631,13.7905 C27.0391,11.0755 24.9251,8.9615 22.2101,7.8375 L21.4441,9.6855 C23.6651,10.6045 25.3951,12.3345 26.3151,14.5555 C27.2351,16.7765 27.2351,19.2235 26.3151,21.4435 C24.4161,26.0285 19.1381,28.2145 14.5561,26.3145 C12.3351,25.3945 10.6041,23.6655 9.6841,21.4445 C8.7651,19.2235 8.7651,16.7765 9.6841,14.5565 C10.6051,12.3345 12.3351,10.6045 14.5561,9.6855 L13.7901,7.8375 C11.0761,8.9615 8.9621,11.0755 7.8371,13.7905 C6.7131,16.5045 6.7131,19.4955 7.8371,22.2095 C8.9611,24.9245 11.0751,27.0385 13.7901,28.1625 C15.1621,28.7305 16.5851,28.9995 17.9851,28.9995 C22.3041,28.9995 26.4101,26.4405 28.1631,22.2095 C29.2871,19.4955 29.2871,16.5045 28.1631,13.7905"/><polygon points="17 18 19 18 19 5 17 5"/></g>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
  </header>
  <div
    className="avatar"
  >
    <img
      alt="user avatar"
      src="http://localhost:8080/Plone/++api++/@portrait/admin"
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </li>
      <li>
        <a
          href="/controlpanel"
          onClick={[Function]}
        >
          Site Setup
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component without Site Setup access 1`] = `
<div
  className="personal-tools pastanaga-menu"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header"
  >
    <button
      className="back"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Back</title><polygon fill-rule="evenodd" points="31 17 8.414 17 18.707 6.707 17.293 5.293 4.586 18 17.293 30.707 18.707 29.293 8.414 19 31 19"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      regular_user
    </h2>
    <a
      href="/logout"
      id="toolbar-logout"
      onClick={[Function]}
    >
      <svg
        className="icon logout"
        dangerouslySetInnerHTML={
          {
            "__html": "<title>Logout</title><g fill-rule="evenodd"><path d="M28.1631,13.7905 C27.0391,11.0755 24.9251,8.9615 22.2101,7.8375 L21.4441,9.6855 C23.6651,10.6045 25.3951,12.3345 26.3151,14.5555 C27.2351,16.7765 27.2351,19.2235 26.3151,21.4435 C24.4161,26.0285 19.1381,28.2145 14.5561,26.3145 C12.3351,25.3945 10.6041,23.6655 9.6841,21.4445 C8.7651,19.2235 8.7651,16.7765 9.6841,14.5565 C10.6051,12.3345 12.3351,10.6045 14.5561,9.6855 L13.7901,7.8375 C11.0761,8.9615 8.9621,11.0755 7.8371,13.7905 C6.7131,16.5045 6.7131,19.4955 7.8371,22.2095 C8.9611,24.9245 11.0751,27.0385 13.7901,28.1625 C15.1621,28.7305 16.5851,28.9995 17.9851,28.9995 C22.3041,28.9995 26.4101,26.4405 28.1631,22.2095 C29.2871,19.4955 29.2871,16.5045 28.1631,13.7905"/><polygon points="17 18 19 18 19 5 17 5"/></g>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
  </header>
  <div
    className="avatar default"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<g fill-rule="evenodd"><path d="M6,11 C5.449,11 5,11.448 5,12 L5,26 C5,26.552 5.449,27 6,27 L30,27 C30.551,27 31,26.552 31,26 L31,12 C31,11.448 30.551,11 30,11 L25.382,11 L23.382,7 L12.618,7 L10.618,11 L6,11 Z M30,29 L6,29 C4.346,29 3,27.654 3,26 L3,12 C3,10.346 4.346,9 6,9 L9.382,9 L11.382,5 L24.618,5 L26.618,9 L30,9 C31.654,9 33,10.346 33,12 L33,26 C33,27.654 31.654,29 30,29 L30,29 Z"/><path d="M18 13C15.243 13 13 15.243 13 18 13 20.757 15.243 23 18 23 20.757 23 23 20.757 23 18 23 15.243 20.757 13 18 13M18 25C14.14 25 11 21.859 11 18 11 14.141 14.14 11 18 11 21.86 11 25 14.141 25 18 25 21.859 21.86 25 18 25M29.5 14C29.5 14.828 28.828 15.5 28 15.5 27.172 15.5 26.5 14.828 26.5 14 26.5 13.172 27.172 12.5 28 12.5 28.828 12.5 29.5 13.172 29.5 14"/></g>",
        }
      }
      onClick={null}
      style={
        {
          "fill": "currentColor",
          "height": "96px",
          "width": "auto",
        }
      }
      viewBox="0 0 36 36"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="pastanaga-menu-list"
  >
    <ul>
      <li>
        <a
          href="/personal-information"
          id="Profile"
          onClick={[Function]}
        >
          Profile
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </li>
      <li>
        <button
          aria-label="Preferences"
          onClick={[Function]}
        >
          Preferences
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<polygon fill-rule="evenodd" points="14.707 26.707 13.293 25.293 20.586 18 13.293 10.707 14.707 9.293 23.414 18"/>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;
